5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4129/executions/1822_3181.log
== TEST (2019-06-13 11:11:31) 
-- CODE:
from numpy import*

vet = array(eval(input("Lista:")))

z = zeros(36, dtype=int)

for i in range(size(vet)):
	if(vet[i] == 0):
		z[0] = z[0] + 1
print (z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:14:24) 
-- CODE:
from numpy import*

vet = array(eval(input("Lista:")))

z = zeros(36, dtype=int)

for i in range(size(vet)):
	if(vet[i] == 0):
		z[0] = z[0] + 1
	elif(vet[i] == 1)
		z[1] = z[1] + 1
	elif(vet[i] == 2):
		z[2] = z[2] + 1
	elif(vet[i] == 3):
		z[3] = z[3] + 1
-- ERROR:
File "XXXX", line 10
    elif(vet[i] == 1)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:14:31) 
-- CODE:
from numpy import*

vet = array(eval(input("Lista:")))

z = zeros(36, dtype=int)

for i in range(size(vet)):
	if(vet[i] == 0):
		z[0] = z[0] + 1
	elif(vet[i] == 1):
		z[1] = z[1] + 1
	elif(vet[i] == 2):
		z[2] = z[2] + 1
	elif(vet[i] == 3):
		z[3] = z[3] + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:15:00) 
-- CODE:
from numpy import*

vet = array(eval(input("Lista:")))

z = zeros(36, dtype=int)

for i in range(size(vet)):
	if(vet[i] == 0):
		z[0] = z[0] + 1
	elif(vet[i] == 1):
		z[1] = z[1] + 1
	elif(vet[i] == 2):
		z[2] = z[2] + 1
	elif(vet[i] == 3):
		z[3] = z[3] + 1
		
		
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:17:12) 
-- CODE:
from numpy import*

vet = array(eval(input("Lista:")))

z = zeros(36, dtype=int)

for i in range(size(vet)):
	if(vet[i] == 0):
		z[0] = z[0] + 1
	elif(vet[i] == 1):
		z[1] = z[1] + 1
	elif(vet[i] == 2):
		z[2] = z[2] + 1
	elif(vet[i] == 3):
		z[3] = z[3] + 1
	elif(vet[i] == 4):
		z[4] = z[4] + 1
	elif(vet[i] == 5):
		z[5] = z[5] + 1
	elif(vet[i] == 6):
		z[6] = z[6] + 1
		
		
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:25:17) 
-- CODE:
from numpy import*

vet = array(eval(input("Lista:")))

z = zeros(36, dtype=int)

for i in range(size(vet)):
	if(vet[i] == 0):
		z[0] = z[0] + 1
	elif(vet[i] == 1):
		z[1] = z[1] + 1
	elif(vet[i] == 2):
		z[2] = z[2] + 1
	elif(vet[i] == 3):
		z[3] = z[3] + 1
	elif(vet[i] == 4):
		z[4] = z[4] + 1
	elif(vet[i] == 5):
		z[5] = z[5] + 1
	elif(vet[i] == 6):
		z[6] = z[6] + 1
	elif(vet[i] == 7):
		z[7] = z[7] + 1
	elif(vet[i] == 8):
		z[8] = z[8] + 1
	elif(vet[i] == 9):
		z[9] = z[9] + 1
	elif(vet[i] == 10):
		z[10] = z[10] + 1
	elif(vet[i] == 11):
		z[11] = z[11] + 1
	elif(vet[i] == 12):
		z[12] = z[12] + 1
	elif(vet[i] == 13):
		z[13] = z[13] + 1
	elif(vet[i] == 14):
		z[14] = z[14] + 1
	elif(vet[i] == 15):
		z[15] = z[15] + 1
	elif(vet[i] == 16):
		z[16] = z[16] + 1
	elif(vet[i] == 17):
		z[17] = z[17] + 1
	elif(vet[i] == 18):
		z[18] = z[18] + 1
	elif(vet[i] == 19):
		z[19] = z[19] + 1
		
		
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:32:03) 
-- CODE:
from numpy import*

vet = array(eval(input("Lista:")))

z = zeros(36, dtype=int)

for i in range(size(vet)):
	if(vet[i] == 0):
		z[0] = z[0] + 1
	elif(vet[i] == 1):
		z[1] = z[1] + 1
	elif(vet[i] == 2):
		z[2] = z[2] + 1
	elif(vet[i] == 3):
		z[3] = z[3] + 1
	elif(vet[i] == 4):
		z[4] = z[4] + 1
	elif(vet[i] == 5):
		z[5] = z[5] + 1
	elif(vet[i] == 6):
		z[6] = z[6] + 1
	elif(vet[i] == 7):
		z[7] = z[7] + 1
	elif(vet[i] == 8):
		z[8] = z[8] + 1
	elif(vet[i] == 9):
		z[9] = z[9] + 1
	elif(vet[i] == 10):
		z[10] = z[10] + 1
	elif(vet[i] == 11):
		z[11] = z[11] + 1
	elif(vet[i] == 12):
		z[12] = z[12] + 1
	elif(vet[i] == 13):
		z[13] = z[13] + 1
	elif(vet[i] == 14):
		z[14] = z[14] + 1
	elif(vet[i] == 15):
		z[15] = z[15] + 1
	elif(vet[i] == 16):
		z[16] = z[16] + 1
	elif(vet[i] == 17):
		z[17] = z[17] + 1
	elif(vet[i] == 18):
		z[18] = z[18] + 1
	elif(vet[i] == 19):
		z[19] = z[19] + 1
	elif(vet[i] == 20):
		z[20] = z[20] + 1
	elif(vet[i] == 21):
		z[21] = z[21] + 1
	elif(vet[i] == 22):
		z[22] = z[22] + 1
	elif(vet[i] == 23):
		z[23] = z[23] + 1
	elif(vet[i]==24):
		z[24] = z[24] + 1
	elif(vet[i] == 25):
		z[25] = z[25] + 1
	elif(vet[i] == 26):
		z[26] = z[26] + 1
	elif(vet[i] == 27):
		z[27] = z[27] + 1
	elif(vet[i] == 28):
		z[28] = z[28] + 1
	elif(vet[i]==29):
		z[29] = z[29] + 1
	elif(vet[i] == 30):
		z[30] = z[30] + 1
	elif(vet[i] == 31):
		z[31] = z[31] + 1
	elif(vet[i] == 32):
		z[32] = z[32]+1
	elif(vet[i] == 33):
		z[33] = z[33] + 1
	elif(vet[i] == 34):
		z[34] = z[34] + 1
	elif(vet[i] == 35):
		z[35] = z[35] + 1
	elif(vet[i] == 36):
		z[36] = z[36] + 1
		
		
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:32:20) 
-- CODE:
from numpy import*

vet = array(eval(input("Lista:")))

z = zeros(36, dtype=int)

for i in range(size(vet)):
	if(vet[i] == 0):
		z[0] = z[0] + 1
	elif(vet[i] == 1):
		z[1] = z[1] + 1
	elif(vet[i] == 2):
		z[2] = z[2] + 1
	elif(vet[i] == 3):
		z[3] = z[3] + 1
	elif(vet[i] == 4):
		z[4] = z[4] + 1
	elif(vet[i] == 5):
		z[5] = z[5] + 1
	elif(vet[i] == 6):
		z[6] = z[6] + 1
	elif(vet[i] == 7):
		z[7] = z[7] + 1
	elif(vet[i] == 8):
		z[8] = z[8] + 1
	elif(vet[i] == 9):
		z[9] = z[9] + 1
	elif(vet[i] == 10):
		z[10] = z[10] + 1
	elif(vet[i] == 11):
		z[11] = z[11] + 1
	elif(vet[i] == 12):
		z[12] = z[12] + 1
	elif(vet[i] == 13):
		z[13] = z[13] + 1
	elif(vet[i] == 14):
		z[14] = z[14] + 1
	elif(vet[i] == 15):
		z[15] = z[15] + 1
	elif(vet[i] == 16):
		z[16] = z[16] + 1
	elif(vet[i] == 17):
		z[17] = z[17] + 1
	elif(vet[i] == 18):
		z[18] = z[18] + 1
	elif(vet[i] == 19):
		z[19] = z[19] + 1
	elif(vet[i] == 20):
		z[20] = z[20] + 1
	elif(vet[i] == 21):
		z[21] = z[21] + 1
	elif(vet[i] == 22):
		z[22] = z[22] + 1
	elif(vet[i] == 23):
		z[23] = z[23] + 1
	elif(vet[i]==24):
		z[24] = z[24] + 1
	elif(vet[i] == 25):
		z[25] = z[25] + 1
	elif(vet[i] == 26):
		z[26] = z[26] + 1
	elif(vet[i] == 27):
		z[27] = z[27] + 1
	elif(vet[i] == 28):
		z[28] = z[28] + 1
	elif(vet[i]==29):
		z[29] = z[29] + 1
	elif(vet[i] == 30):
		z[30] = z[30] + 1
	elif(vet[i] == 31):
		z[31] = z[31] + 1
	elif(vet[i] == 32):
		z[32] = z[32]+1
	elif(vet[i] == 33):
		z[33] = z[33] + 1
	elif(vet[i] == 34):
		z[34] = z[34] + 1
	elif(vet[i] == 35):
		z[35] = z[35] + 1
	elif(vet[i] == 36):
		z[36] = z[36] + 1
		
		
print(z)
-- EXECUTION TIME:
0.839274
-- TEST CASE 1:
---- input:
[1,2,3,34,1,0]
---- correct output:
 [1 2 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0]
---- user output:
[1 2 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0]
-- TEST CASE 2:
---- input:
[22,22,0,0,16]
---- correct output:
[2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
---- user output:
[2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[1,2,3,4,5,6,7,8,1,2,3,4,5,6,7,8]
---- correct output:
[0 2 2 2 2 2 2 2 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
---- user output:
[0 2 2 2 2 2 2 2 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:32:26) 
-- CODE:
from numpy import*

vet = array(eval(input("Lista:")))

z = zeros(36, dtype=int)

for i in range(size(vet)):
	if(vet[i] == 0):
		z[0] = z[0] + 1
	elif(vet[i] == 1):
		z[1] = z[1] + 1
	elif(vet[i] == 2):
		z[2] = z[2] + 1
	elif(vet[i] == 3):
		z[3] = z[3] + 1
	elif(vet[i] == 4):
		z[4] = z[4] + 1
	elif(vet[i] == 5):
		z[5] = z[5] + 1
	elif(vet[i] == 6):
		z[6] = z[6] + 1
	elif(vet[i] == 7):
		z[7] = z[7] + 1
	elif(vet[i] == 8):
		z[8] = z[8] + 1
	elif(vet[i] == 9):
		z[9] = z[9] + 1
	elif(vet[i] == 10):
		z[10] = z[10] + 1
	elif(vet[i] == 11):
		z[11] = z[11] + 1
	elif(vet[i] == 12):
		z[12] = z[12] + 1
	elif(vet[i] == 13):
		z[13] = z[13] + 1
	elif(vet[i] == 14):
		z[14] = z[14] + 1
	elif(vet[i] == 15):
		z[15] = z[15] + 1
	elif(vet[i] == 16):
		z[16] = z[16] + 1
	elif(vet[i] == 17):
		z[17] = z[17] + 1
	elif(vet[i] == 18):
		z[18] = z[18] + 1
	elif(vet[i] == 19):
		z[19] = z[19] + 1
	elif(vet[i] == 20):
		z[20] = z[20] + 1
	elif(vet[i] == 21):
		z[21] = z[21] + 1
	elif(vet[i] == 22):
		z[22] = z[22] + 1
	elif(vet[i] == 23):
		z[23] = z[23] + 1
	elif(vet[i]==24):
		z[24] = z[24] + 1
	elif(vet[i] == 25):
		z[25] = z[25] + 1
	elif(vet[i] == 26):
		z[26] = z[26] + 1
	elif(vet[i] == 27):
		z[27] = z[27] + 1
	elif(vet[i] == 28):
		z[28] = z[28] + 1
	elif(vet[i]==29):
		z[29] = z[29] + 1
	elif(vet[i] == 30):
		z[30] = z[30] + 1
	elif(vet[i] == 31):
		z[31] = z[31] + 1
	elif(vet[i] == 32):
		z[32] = z[32]+1
	elif(vet[i] == 33):
		z[33] = z[33] + 1
	elif(vet[i] == 34):
		z[34] = z[34] + 1
	elif(vet[i] == 35):
		z[35] = z[35] + 1
	elif(vet[i] == 36):
		z[36] = z[36] + 1
		
		
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:34:16) 
-- CODE:
from numpy import*

vet = array(eval(input("Lista:")))

z = zeros(36, dtype=int)

for i in range(size(vet)):
	if(vet[i] == 0):
		z[0] = z[0] + 1
	elif(vet[i] == 1):
		z[1] = z[1] + 1
	elif(vet[i] == 2):
		z[2] = z[2] + 1
	elif(vet[i] == 3):
		z[3] = z[3] + 1
	elif(vet[i] == 4):
		z[4] = z[4] + 1
	elif(vet[i] == 5):
		z[5] = z[5] + 1
	elif(vet[i] == 6):
		z[6] = z[6] + 1
	elif(vet[i] == 7):
		z[7] = z[7] + 1
	elif(vet[i] == 8):
		z[8] = z[8] + 1
	elif(vet[i] == 9):
		z[9] = z[9] + 1
	elif(vet[i] == 10):
		z[10] = z[10] + 1
	elif(vet[i] == 11):
		z[11] = z[11] + 1
	elif(vet[i] == 12):
		z[12] = z[12] + 1
	elif(vet[i] == 13):
		z[13] = z[13] + 1
	elif(vet[i] == 14):
		z[14] = z[14] + 1
	elif(vet[i] == 15):
		z[15] = z[15] + 1
	elif(vet[i] == 16):
		z[16] = z[16] + 1
	elif(vet[i] == 17):
		z[17] = z[17] + 1
	elif(vet[i] == 18):
		z[18] = z[18] + 1
	elif(vet[i] == 19):
		z[19] = z[19] + 1
	elif(vet[i] == 20):
		z[20] = z[20] + 1
	elif(vet[i] == 21):
		z[21] = z[21] + 1
	elif(vet[i] == 22):
		z[22] = z[22] + 1
	elif(vet[i] == 23):
		z[23] = z[23] + 1
	elif(vet[i]==24):
		z[24] = z[24] + 1
	elif(vet[i] == 25):
		z[25] = z[25] + 1
	elif(vet[i] == 26):
		z[26] = z[26] + 1
	elif(vet[i] == 27):
		z[27] = z[27] + 1
	elif(vet[i] == 28):
		z[28] = z[28] + 1
	elif(vet[i]==29):
		z[29] = z[29] + 1
	elif(vet[i] == 30):
		z[30] = z[30] + 1
	elif(vet[i] == 31):
		z[31] = z[31] + 1
	elif(vet[i] == 32):
		z[32] = z[32]+1
	elif(vet[i] == 33):
		z[33] = z[33] + 1
	elif(vet[i] == 34):
		z[34] = z[34] + 1
	elif(vet[i] == 35):
		z[35] = z[35] + 1
	elif(vet[i] == 36):
		z[36] = z[36] + 1
		
		
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:34:28) 
-- CODE:
from numpy import*

vet = array(eval(input("Lista:")))

z = zeros(37, dtype=int)

for i in range(size(vet)):
	if(vet[i] == 0):
		z[0] = z[0] + 1
	elif(vet[i] == 1):
		z[1] = z[1] + 1
	elif(vet[i] == 2):
		z[2] = z[2] + 1
	elif(vet[i] == 3):
		z[3] = z[3] + 1
	elif(vet[i] == 4):
		z[4] = z[4] + 1
	elif(vet[i] == 5):
		z[5] = z[5] + 1
	elif(vet[i] == 6):
		z[6] = z[6] + 1
	elif(vet[i] == 7):
		z[7] = z[7] + 1
	elif(vet[i] == 8):
		z[8] = z[8] + 1
	elif(vet[i] == 9):
		z[9] = z[9] + 1
	elif(vet[i] == 10):
		z[10] = z[10] + 1
	elif(vet[i] == 11):
		z[11] = z[11] + 1
	elif(vet[i] == 12):
		z[12] = z[12] + 1
	elif(vet[i] == 13):
		z[13] = z[13] + 1
	elif(vet[i] == 14):
		z[14] = z[14] + 1
	elif(vet[i] == 15):
		z[15] = z[15] + 1
	elif(vet[i] == 16):
		z[16] = z[16] + 1
	elif(vet[i] == 17):
		z[17] = z[17] + 1
	elif(vet[i] == 18):
		z[18] = z[18] + 1
	elif(vet[i] == 19):
		z[19] = z[19] + 1
	elif(vet[i] == 20):
		z[20] = z[20] + 1
	elif(vet[i] == 21):
		z[21] = z[21] + 1
	elif(vet[i] == 22):
		z[22] = z[22] + 1
	elif(vet[i] == 23):
		z[23] = z[23] + 1
	elif(vet[i]==24):
		z[24] = z[24] + 1
	elif(vet[i] == 25):
		z[25] = z[25] + 1
	elif(vet[i] == 26):
		z[26] = z[26] + 1
	elif(vet[i] == 27):
		z[27] = z[27] + 1
	elif(vet[i] == 28):
		z[28] = z[28] + 1
	elif(vet[i]==29):
		z[29] = z[29] + 1
	elif(vet[i] == 30):
		z[30] = z[30] + 1
	elif(vet[i] == 31):
		z[31] = z[31] + 1
	elif(vet[i] == 32):
		z[32] = z[32]+1
	elif(vet[i] == 33):
		z[33] = z[33] + 1
	elif(vet[i] == 34):
		z[34] = z[34] + 1
	elif(vet[i] == 35):
		z[35] = z[35] + 1
	elif(vet[i] == 36):
		z[36] = z[36] + 1
		
		
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:34:39) 
-- CODE:
from numpy import*

vet = array(eval(input("Lista:")))

z = zeros(37, dtype=int)

for i in range(size(vet)):
	if(vet[i] == 0):
		z[0] = z[0] + 1
	elif(vet[i] == 1):
		z[1] = z[1] + 1
	elif(vet[i] == 2):
		z[2] = z[2] + 1
	elif(vet[i] == 3):
		z[3] = z[3] + 1
	elif(vet[i] == 4):
		z[4] = z[4] + 1
	elif(vet[i] == 5):
		z[5] = z[5] + 1
	elif(vet[i] == 6):
		z[6] = z[6] + 1
	elif(vet[i] == 7):
		z[7] = z[7] + 1
	elif(vet[i] == 8):
		z[8] = z[8] + 1
	elif(vet[i] == 9):
		z[9] = z[9] + 1
	elif(vet[i] == 10):
		z[10] = z[10] + 1
	elif(vet[i] == 11):
		z[11] = z[11] + 1
	elif(vet[i] == 12):
		z[12] = z[12] + 1
	elif(vet[i] == 13):
		z[13] = z[13] + 1
	elif(vet[i] == 14):
		z[14] = z[14] + 1
	elif(vet[i] == 15):
		z[15] = z[15] + 1
	elif(vet[i] == 16):
		z[16] = z[16] + 1
	elif(vet[i] == 17):
		z[17] = z[17] + 1
	elif(vet[i] == 18):
		z[18] = z[18] + 1
	elif(vet[i] == 19):
		z[19] = z[19] + 1
	elif(vet[i] == 20):
		z[20] = z[20] + 1
	elif(vet[i] == 21):
		z[21] = z[21] + 1
	elif(vet[i] == 22):
		z[22] = z[22] + 1
	elif(vet[i] == 23):
		z[23] = z[23] + 1
	elif(vet[i]==24):
		z[24] = z[24] + 1
	elif(vet[i] == 25):
		z[25] = z[25] + 1
	elif(vet[i] == 26):
		z[26] = z[26] + 1
	elif(vet[i] == 27):
		z[27] = z[27] + 1
	elif(vet[i] == 28):
		z[28] = z[28] + 1
	elif(vet[i]==29):
		z[29] = z[29] + 1
	elif(vet[i] == 30):
		z[30] = z[30] + 1
	elif(vet[i] == 31):
		z[31] = z[31] + 1
	elif(vet[i] == 32):
		z[32] = z[32]+1
	elif(vet[i] == 33):
		z[33] = z[33] + 1
	elif(vet[i] == 34):
		z[34] = z[34] + 1
	elif(vet[i] == 35):
		z[35] = z[35] + 1
	elif(vet[i] == 36):
		z[36] = z[36] + 1
		
		
print(z)
-- EXECUTION TIME:
1.16276
-- TEST CASE 1:
---- input:
[1,2,3,34,1,0]
---- correct output:
 [1 2 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0]
---- user output:
[1 2 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0]
-- TEST CASE 2:
---- input:
[22,22,0,0,16]
---- correct output:
[2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
---- user output:
[2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[1,2,3,4,5,6,7,8,1,2,3,4,5,6,7,8]
---- correct output:
[0 2 2 2 2 2 2 2 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
---- user output:
[0 2 2 2 2 2 2 2 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
